--- a/src/components/CSS/InputPanel.css
+++ b/src/components/CSS/InputPanel.css
@@ -6,16 +6,23 @@
     margin-left: 1vw;
     margin-bottom: 1vw;
     background-color: white;
-    display: inline-block;
+    width: 20vw;
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.flexBreak {
+    width: 100%;
+    height: 0;
+}
 #inputPanel > div {
     padding: 15px 10px;
     display: block;
+    font-size: calc(1vw + 1vh)
 }
 
 #inputPanel > div > input {
-    width: 50px;
+    width: 6vw;
     padding: 10px;
     margin-left: 6px;
     margin-right: 3px;
@@ -23,7 +30,7 @@
     outline-style: none;
     box-shadow: none;
     border-color: transparent;
-
+    font-size: calc(1vw + 1vh);
     border: black 2px solid;
 }
 
